# AABBtree

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Rakefile
.github/workflows/: run_cmake_inclusion_tests.yml
benchmarks/: BenchmarkUtilities.hh  CMakeLists.txt  Plot2D.hh  TicToc.hxx  benchmark_asteroids.cc  benchmark_asteroids_clustering.cc  benchmark_asteroids_clustering_custom.cc  benchmark_asteroids_clustering_frechet.cc  benchmark_asteroids_clustering_hausdorff.cc  benchmark_asteroids_complexity.cc  benchmark_asteroids_orbit.cc  benchmark_functions.cc
cmake/: AABBtreeCatch2.cmake  AABBtreeEigen3.cmake  AABBtreeMatplot.cmake  AABBtreeVersion.cmake  Config.cmake.in
cmake/test_cmake_inclusion/: CMakeLists.txt  test.cc
docs/: _a_a_b_btree_8hh.html  _a_a_b_btree_8hh.js  _a_a_b_btree_8hh__incl.map  _a_a_b_btree_8hh__incl.md5  _a_a_b_btree_8hh_source.html  _a_a_b_btree_8hxx.html  _a_a_b_btree_8hxx.js  _a_a_b_btree_8hxx_source.html  _aligned_box_8hxx.html  _aligned_box_8hxx.js  _aligned_box_8hxx__dep__incl.map  _aligned_box_8hxx__dep__incl.md5  _aligned_box_8hxx_source.html  _box_8hxx.html  _box_8hxx.js  _box_8hxx__dep__incl.map  _box_8hxx__dep__incl.md5  _box_8hxx__incl.map  _box_8hxx__incl.md5  _box_8hxx_source.html  _mainpage_8md.html  _non_recursive_8hxx.html  _non_recursive_8hxx.js  _non_recursive_8hxx__dep__incl.map  _non_recursive_8hxx__dep__incl.md5  _non_recursive_8hxx__incl.map  _non_recursive_8hxx__incl.md5  _non_recursive_8hxx_source.html  _ray_8hxx.html  _ray_8hxx.js  _ray_8hxx__dep__incl.map  _ray_8hxx__dep__incl.md5  _ray_8hxx__incl.map  _ray_8hxx__incl.md5  _ray_8hxx_source.html  _recursive_8hxx.html  _recursive_8hxx.js  _recursive_8hxx__incl.map  _recursive_8hxx__incl.md5  _recursive_8hxx_source.html  (+111 more)
docs/include/doxygen-custom/: header.html
docs/markdown/: Mainpage.md
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+32 more)
examples/: CMakeLists.txt  example_box.cc  example_ray.cc  example_tree.cc
include/: AABBtree.hh  Plot2D.hh
include/AABBtree/: AABBtree.hxx  AlignedBox.hxx  Box.hxx  NonRecursive.hxx  NonRecursiveTree.hxx  Ray.hxx  Recursive.hxx  RecursiveTree.hxx  Tree.hxx
tests/: CMakeLists.txt  Plot2D.hh  TestUtilities.hh  test_aabbtree.cc  test_alignedbox.cc  test_box.cc  test_nonrecursive.cc  test_ray.cc  test_recursive.cc  test_tree.cc  test_tree_distance.cc  test_tree_intersection.cc  test_tree_objs.cc  test_tree_tree.cc  test_utilities.hh
